changing App icon

--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -2,7 +2,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="/users/" class="brand-link text-sm">
-        <img src="/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+        <img src="/img/small.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">{{title}}</span>
     </a>
 
@@ -17,7 +17,7 @@
                     <a href="/users" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
                         <p>
-                            Widgets
+                            Dashboard
                             <!--span-- class="right badge badge-danger">New</span-->
                         </p>
                     </a>
@@ -52,7 +52,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item has-treeview">
+                <!--li-- class="nav-item has-treeview">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-copy"></i>
                         <p>
@@ -105,7 +105,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li-->
                 <li class="nav-item has-treeview">
                     <a href="file:///C:/Users/ronew/Music/5th_edition_examples/AdminLTE-3.0.5/index3.html#" class="nav-link">
                         <i class="nav-icon fas fa-chart-pie"></i>
