--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -8,6 +8,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Favicon -->
+    <link rel="icon" href="/img/small.png" />
+    <link rel="apple-touch-icon" href="/img/small.png" />
+
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="/css/all.min.css">
   <!-- Theme style -->
