--- a/templates/views/ronewa.hbs
+++ b/templates/views/ronewa.hbs
@@ -3,11 +3,12 @@
 
 <head>
     <title>{{title}}</title>
-    <!--link rel='stylesheet' href='/stylesheets/style.css' /-->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Favicon -->
+    <link rel="icon" href="/images/ronewa.svg">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/app.css">
     <!-- Theme style -->
@@ -17,13 +18,12 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <!--link rel='stylesheet' href='/stylesheets/style.css' /-->
+
 </head>
 
 <body class="app">
     <div class="preloader"></div>
     {{{body}}}
-
 
     <!-- jQuery -->
     <script src="/js/jquery/jquery.min.js"></script>
@@ -33,23 +33,8 @@
     <script src="/js/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="/js/demo.js"></script>
-    <!-- FLOT CHARTS -->
-    <script src="/js/flot/jquery.flot.js"></script>
-    <!-- FLOT RESIZE PLUGIN - allows the chart to redraw when the window is resized -->
-    <script src="/js/flot-old/jquery.flot.resize.min.js"></script>
-    <!-- FLOT PIE PLUGIN - also used to draw donut charts -->
-    <script src="/js/flot-old/jquery.flot.pie.min.js"></script>
-    <!-- ChartJS -->
-    <!--script-- src="/js/chart.js/Chart.min.js"></script-->
-    <script src="/js/app.js"></script>
-    <!-- AdminLTE App -->
-    <!--script src="/js/adminlte.min.js"></script-->
     <!-- Preload -->
     <script src="/javascripts/preload.js"></script>
-    <script src="/javascripts/complete.js"></script>
-    <script src="/javascripts/costume.js"></script>
     <script>
         console.log('Client side javascript file is loaded!');
     </script>
