adding cog icon

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -130,7 +130,7 @@
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item">
-                    <i class="fa fa-gear fa-fw"></i> Settings
+                    <i class="fa fa-cog fa-fw"></i> Settings
                 </a>
                 <div class="dropdown-divider"></div>
                 <a href="/signout" class="dropdown-item">
