--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -33,20 +33,20 @@
                     <ul class="nav nav-treeview" style="display: none;">
                         <li class="nav-item">
                             <a href="#" class="nav-link" role="button" data-toggle="modal" data-target="#modals">
-                                <i class="fa fa-terminal nav-icon"></i>
+                                <i class="nav-icon fas fa-edit "></i>
                                 <p>Add Schedule</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/users/padding-schedules" class="nav-link">
-                                <i class="fa fa-door-open nav-icon"></i>
-                                <p>Active Page</p>
+                                <i class="nav-icon fa fa-door-open"></i>
+                                <p>Active Task</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/users/completed-schedules" class="nav-link">
-                                <i class="fa fa-door-closed nav-icon"></i>
-                                <p>Inactive Page</p>
+                                <i class="nav-icon fa fa-door-closed"></i>
+                                <p>Inactive Task</p>
                             </a>
                         </li>
                     </ul>
