--- a/templates/partials/dynamic_header.hbs
+++ b/templates/partials/dynamic_header.hbs
@@ -7,7 +7,7 @@
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/users/">{{title}}</a></li>
+                    <li class="breadcrumb-item"><a href="/users/" class="text-muted">{{title}}</a></li>
                     <li class="breadcrumb-item active">{{head}}</li>
                 </ol>
             </div><!-- /.col -->
