--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -2,7 +2,7 @@
 <footer class="main-footer text-sm">
     <span>Copyright &copy; 2019 -
         <script>document.write(new Date().getFullYear());</script>
-        <a href="#" style="text-decoration: none;">Ronewa.io</a>.
+        <a href="#" style="text-decoration: none;" class="text-muted">Ronewa.io</a>.
     </span>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
