fixing events layout

--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -52,7 +52,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item has-treeview">
+                <!--li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-copy"></i>
                         <p>
@@ -112,8 +112,8 @@
                             </a>
                         </li>
                     </ul>
-                </li>
-                <li class="nav-item has-treeview">
+                </li-->
+                <!--li class="nav-item has-treeview">
                     <a href="file:///C:/Users/ronew/Music/5th_edition_examples/AdminLTE-3.0.5/index3.html#"
                         class="nav-link">
                         <i class="nav-icon fas fa-chart-pie"></i>
@@ -145,8 +145,8 @@
                             </a>
                         </li>
                     </ul>
-                </li>
-                <li class="nav-item has-treeview">
+                </li-->
+                <!--li class="nav-item has-treeview">
                     <a href="file:///C:/Users/ronew/Music/5th_edition_examples/AdminLTE-3.0.5/index3.html#"
                         class="nav-link">
                         <i class="nav-icon fas fa-tree"></i>
@@ -213,7 +213,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li-->
                 <li class="nav-item has-treeview">
                     <a href="file:///C:/Users/ronew/Music/5th_edition_examples/AdminLTE-3.0.5/index3.html#"
                         class="nav-link">
