--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -125,7 +125,7 @@
                 <!--i class="dropdown-toggle dropdown-icon"></i-->
             </a>
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
-                <a href="#" class="dropdown-item">
+                <a href="#" class="dropdown-item" role="button" data-toggle="modal" data-target="#modal-info">
                     <i class="fa fa-user fa-fw"></i> User Profile
                 </a>
                 <div class="dropdown-divider"></div>
