--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -14,6 +14,8 @@
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="/css/all.min.css">
+  <!-- daterange picker -->
+  <link rel="stylesheet" href="/js/daterangepicker/daterangepicker.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="/css/adminlte.min.css">
   <!-- Ionicons -->
