--- a/templates/views/padding-schedules.hbs
+++ b/templates/views/padding-schedules.hbs
@@ -6,7 +6,7 @@
                 <div class="card mb-1 mt-3 bg-info">
                     <div class="card-body">
                         <div class="text-center">
-                            <h4 class="text-white text-center">No Padding Task has been found</h4>
+                            <h4 class="text-white text-center text-md">No Padding Task has been found</h4>
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                                 <button type="button" class="btn btn-default btn-sm edit" name="edit" value='{{_id}}'
                                     id='{{_id}}' onclick="mt">
                                     <i class="fas fa-pencil-alt"></i>
-                                    Complete</button>
+                                </button>
                             </div>
                             <!-- /.card-body -->
                         </div>
