fixing mailbox file

--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -59,7 +59,7 @@
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
-                    <ul class="nav nav-treeview">
+                    <ul class="nav nav-treeview"  style="display: none;">
                         <li class="nav-item">
                             <a href="/users/inbox" class="nav-link">
                                 <i class="fas fa-inbox nav-icon"></i>
