--- a/templates/views/mailbox.hbs
+++ b/templates/views/mailbox.hbs
@@ -60,7 +60,7 @@
                                     <tr>
                                         <td>
                                             <div class="icheck-primary">
-                                                <input type="checkbox" value="{{}}" id="check1">
+                                                <input type="checkbox" value="{{jj}}" id="check1">
                                                 <label for="check1"></label>
                                             </div>
                                         </td>
