--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -51,6 +51,15 @@
                         </li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a href="/users/inbox" class="nav-link">
+                        <i class="nav-icon fas fa-envelope"></i>
+                        <p>
+                            Mailbox
+                            <!--span-- class="right badge badge-danger">New</span-->
+                        </p>
+                    </a>
+                </li>
                 <li class="nav-item has-treeview" id="mail">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-envelope"></i>
@@ -61,7 +70,7 @@
                     </a>
                     <ul class="nav nav-treeview"  style="display: none;">
                         <li class="nav-item">
-                            <a href="/users/inbox" class="nav-link">
+                            <a href="#" class="nav-link">
                                 <i class="fas fa-inbox nav-icon"></i>
                                 <p>Inbox</p>
                             </a>
