--- a/templates/partials/modals.hbs
+++ b/templates/partials/modals.hbs
@@ -80,7 +80,7 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
-<!-- /.modal -->
+<!-- /.modal task/schedule -->
 <div class="modal fade" id="modal-info">
     <div class="modal-dialog">
         <div class="modal-content bg-info">
@@ -101,4 +101,46 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
-<!-- /.modal -->
+<!-- /.modal profile -->
+
+<!-- modal compose -->
+<div class="modal fade" id="modal-compose" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="card-title">New Message</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input class="form-control" placeholder="To:">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" placeholder="Subject:">
+                </div>
+                <div class="form-group">
+                    <textarea id="compose-textarea" class="form-control" style="height: 600px">
+
+                      <p class="text-disabled disabled">Thank you,</p>
+                      <p class="text-capitalize disabled" >{{dd}}</p>
+                    </textarea>
+                </div>
+                <div class="form-group">
+                    <div class="btn btn-default btn-file">
+                        <i class="fas fa-paperclip"></i> Attachment
+                        <input type="file" name="attachment">
+                    </div>
+                    <p class="help-block">Max. 32MB</p>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Discard</button>
+                <div class="float-right">
+                    <button type="button" class="btn btn-default disabled"><i class="fas fa-pencil-alt"></i> Draft</button>
+                    <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
