--- a/templates/views/mailbox.hbs
+++ b/templates/views/mailbox.hbs
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
+                <a href="#" data-toggle="modal" data-target="#modal-compose" class="btn btn-primary btn-block mb-3">Compose</a>
                 <div class="card">
                     <div class="card-header text-center">
                         <h3 class="card-title text-center">Folders</h3>
-
                         <!--div class="card-tools">
                             <button type="button" class="btn btn-tool" data-card-widget="collapse"><i
                                     class="fas fa-minus"></i>
