--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -51,7 +51,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="mails">
                     <a href="/users/inbox" class="nav-link">
                         <i class="nav-icon fas fa-envelope"></i>
                         <p>
@@ -62,9 +62,9 @@
                 </li>
                 <li class="nav-item has-treeview" id="mail">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-envelope"></i>
+                        <i class="nav-icon fas fa-users"></i>
                         <p>
-                            Mailbox
+                            Friends
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
