--- a/templates/partials/modals.hbs
+++ b/templates/partials/modals.hbs
@@ -121,9 +121,11 @@
                 </div>
                 <div class="form-group">
                     <textarea id="compose-textarea" class="form-control" style="height: 600px">
-
-                      <p class="text-disabled disabled">Thank you,</p>
-                      <p class="text-capitalize disabled" >{{dd}}</p>
+                        <div class="mb-3">
+                            <p>Enter your message here</p>
+                        </div>
+                      <p class="disabled mt-5">Thank you,</p>
+                      <p class="text-capitalize disabled mb-0">{{dd}}</p>
                     </textarea>
                 </div>
                 <div class="form-group">
@@ -137,7 +139,7 @@
             <div class="modal-footer justify-content-between">
                 <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Discard</button>
                 <div class="float-right">
-                    <button type="button" class="btn btn-default disabled"><i class="fas fa-pencil-alt"></i> Draft</button>
+                    <button type="button" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Draft</button>
                     <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
                 </div>
             </div>
