--- a/templates/views/mailbox.hbs
+++ b/templates/views/mailbox.hbs
@@ -15,13 +15,13 @@
                     <div class="card-body p-0">
                         <ul class="nav nav-pills flex-column">
                             <li class="nav-item active">
-                                <a href="#" class="nav-link">
+                                <a href="#" class="nav-link" id="inbox_click">
                                     <i class="fas fa-inbox"></i> Inbox
-                                    <span class="badge bg-primary float-right">{{count}}</span>
+                                    <!--span-- class="badge bg-primary float-right">{{count}}</span-->
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#" class="nav-link" id="sent_click">
                                     <i class="far fa-envelope"></i> Sent
                                 </a>
                             </li>
@@ -37,10 +37,9 @@
                 <!-- /.card -->
             </div>
             <div class="col-md-9">
-                <div class="card">
+                <div class="card" id="inbox_hide">
                     <div class="card-header">
                         <h3 class="card-title">Inbox</h3>
-
                         <div class="card-tools">
                             <div class="input-group input-group-sm">
                                 <input type="text" class="form-control" placeholder="Search Mail">
@@ -129,6 +128,45 @@
                                         <td class="mailbox-attachment"></td>
                                         <td class="mailbox-date">15 hours ago</td>
                                     </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card" id="sent_hide">
+                    <div class="card-header">
+                        <h3 class="card-title">Sent Mail</h3>
+                        <div class="card-tools">
+                            <div class="input-group input-group-sm">
+                                <input type="text" class="form-control" placeholder="Search Mail">
+                                <div class="input-group-append">
+                                    <div class="btn btn-primary">
+                                        <i class="fas fa-search"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.card-tools -->
+                    </div>
+                    <div class="card-body p-0">
+                        <div class="table-responsive mailbox-messages">
+                            <table class="table table-hover table-striped">
+                                <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="icheck-primary">
+                                            <input type="checkbox" value="" id="check1">
+                                            <label for="check1"></label>
+                                        </div>
+                                    </td>
+                                    <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
+                                    <td class="mailbox-name"><a href="read-mail.html">Alexander Pierce</a></td>
+                                    <td class="mailbox-subject"><b>AdminLTE 3.0 Issue</b> - Trying to find a solution to this problem...
+                                    </td>
+                                    <td class="mailbox-attachment"></td>
+                                    <td class="mailbox-date">5 mins ago</td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
