--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -71,14 +71,19 @@
                     <ul class="nav nav-treeview"  style="display: none;">
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="fas fa-inbox nav-icon"></i>
-                                <p>Inbox</p>
+                                <i class="fas nav-icon"></i>
+                                <p>Followers
+                                    <span class="right badge badge-danger">New</span>
+                                </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-pencil-alt"></i>
-                                <p>Compose</p>
+                                <i class="nav-icon fas"></i>
+                                <p>Following
+                                    <!--span-- class="right badge badge-danger">
+                                        New</span-->
+                                </p>
                             </a>
                         </li>
                         <!--li class="nav-item">
