--- a/templates/partials/modals.hbs
+++ b/templates/partials/modals.hbs
@@ -107,12 +107,14 @@
 <div class="modal fade" id="modal-compose" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
+
             <div class="modal-header">
                 <h3 class="card-title">New Message</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
+                <form action="" method="post">
                 <div class="form-group">
                     <input class="form-control" placeholder="To:">
                 </div>
@@ -135,14 +137,23 @@
                     </div>
                     <p class="help-block">Max. 32MB</p>
                 </div>
+                <div class="justify-content-between mt-3">
+                    <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Discard</button>
+                    <div class="float-right">
+                        <button type="button" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Draft</button>
+                        <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
+                    </div>
+                </div>
+                </form>
             </div>
-            <div class="modal-footer justify-content-between">
+            <!--div-- class="modal-footer justify-content-between">
                 <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Discard</button>
                 <div class="float-right">
                     <button type="button" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Draft</button>
                     <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
                 </div>
-            </div>
+            </div-->
+
         </div>
     </div>
 </div>
